<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_AlarmSimpleListener" Id="{ebcdb5e6-e7e3-4e2b-8f7e-8d784fae0a6c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AlarmSimpleListener IMPLEMENTS I_Observer
VAR_INPUT
	machine_id: STRING;
END_VAR
VAR_OUTPUT
	message	: AlarmMessage;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="send_signal" Id="{7b6f31b1-2795-48a6-bdc0-cbc0481169ba}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD send_signal : BOOL
VAR_INPUT
	pAlarm	: POINTER TO FB_Alarm;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[message.event_id := UDINT_TO_STRING(pAlarm^.nEventId);
message.machine_id := machine_id;
message.module_name := pAlarm^.module_name;
message.severity := pAlarm^.eSeverity;
message.text := pAlarm^.alarm_text;
message.status := pAlarm^.bActive;
IF pAlarm^.bActive THEN
	message.datetime := pAlarm^.last_raise_time;
ELSE
	message.datetime := pAlarm^.last_reset_time;			
END_IF
message.sequence_number := pAlarm^.sequence_number;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_AlarmSimpleListener">
      <LineId Id="51" Count="0" />
    </LineIds>
    <LineIds Name="FB_AlarmSimpleListener.send_signal">
      <LineId Id="31" Count="9" />
      <LineId Id="13" Count="0" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>